feat(api): gen openapi spec for the ocs api controller
